[imad-console] Updates ui/index.html

--- a/ui/index.html
+++ b/ui/index.html
@@ -9,7 +9,7 @@
         </div>
         <br>
         <div class="center text-big bold">
-            Hi! I am your webapp.
+            <marquee>Hi! I am Ashutosh, and welcome to my site! ye hey!...</marquee>
         </div>
         <script type="text/javascript" src="/ui/main.js">
         </script>
