[imad-console] Updates ui/A_info.html

--- a/ui/A_info.html
+++ b/ui/A_info.html
@@ -1,4 +1,13 @@
 <html>
+    <head>
 <title> Ashutosh's Page</title>
+</head>
 
-/html>
+<body>
+    <div>
+ <a href="/">home</a>   
+    </div>
+    
+    
+</body>
+</html>
