--- a/ui/hello.html
+++ b/ui/hello.html
@@ -3,7 +3,7 @@
 <title> Ashutosh's Page</title>
 <meta name="viewport" content="width=device-width, intial-scale=1" />
 </head>
-
+<link href="/ui/style.css" rel="stylesheet"/>
 <body>
     <div class="container">
  <a href="/">home</a>   
