[imad-console] Updates ui/index.html

--- a/ui/index.html
+++ b/ui/index.html
@@ -24,5 +24,6 @@
         
         <script type="text/javascript" src="/ui/main.js">
         </script>
+        <a href="http://aashhuttossh.imad.hasura-app.io/hello"> LINK TO INTRO PAGE OF MINE!!</a>
     </body>
 </html>
