[imad-console] Updates ui/hello.html

--- a/ui/hello.html
+++ b/ui/hello.html
@@ -6,10 +6,8 @@
 </head>
 
 <body>
-    <div class="container">
- <a href="/">home</a>   
-    </div>
-  
+ <p align=center><img src="img.jpg"></p>
+ 
    
   hello worlda    dsnv    asf
    
