[imad-console] Updates ui/hello.html

--- a/ui/hello.html
+++ b/ui/hello.html
@@ -5,7 +5,7 @@
 <link href="/ui/style.css" rel="stylesheet"/>
 </head>
 
-<body>
+<body bgcolor="white">
  <p align=center><img src="img.jpg"></p>
  
    
