[imad-console] Updates ui/hello.html

--- a/ui/hello.html
+++ b/ui/hello.html
@@ -6,7 +6,7 @@
 </head>
 
 <body bgcolor="white">
- <p align=center><img src="img.jpg"></p>
+ <p align=center><img src="ui/img.jpg"></p>
  
    
   hello worlda    dsnv    asf
