[imad-console] Updates ui/hello.html

--- a/ui/hello.html
+++ b/ui/hello.html
@@ -6,10 +6,14 @@
 </head>
 
 <body bgcolor="white">
- <p align=center><img src="ui/img.jpg"></p>
+ <p align=center><img src="ui/img.jpg" height="50" width="50"></p>
  
-   
-  hello worlda    dsnv    asf
+ <div class="text">
+     Name: Ashutosh Singh
+     Age:20
+     University/College: Lovely Professional University
+ </div>  
+ 
    
    
 </body>
