--- a/ui/hello.html
+++ b/ui/hello.html
@@ -8,10 +8,12 @@
 <body bgcolor="white">
  <p align=center><img src="ui/img.jpg" height="50" width="50"></p>
  
- <div class="text">
+ <div class="text" align=center>
+ <pre>    
      Name: Ashutosh Singh
      Age:20
      University/College: Lovely Professional University
+ </pre>
  </div>  
  
    
