--- a/ui/hello.html
+++ b/ui/hello.html
@@ -6,7 +6,7 @@
 </head>
 
 <body bgcolor="white">
- <p align=center><img src="ui/img.jpg" height="50" width="50"></p>
+ <div align=center><img src="ui/img.jpg" height="50" width="50"></div>
  
  <div class="text" align=center>
  <pre>    
