--- a/ui/hello.html
+++ b/ui/hello.html
@@ -3,6 +3,9 @@
 <title> Ashutosh's Page</title>
 <meta name="viewport" content="width=device-width, intial-scale=1" />
 <link href="/ui/style.css" rel="stylesheet"/>
+<script>
+    alert("I am in java Scrip");
+</script>
 <script src="/ui/isrc.js"></script>
 </head>
 
