[imad-console] Updates ui/hello.html

--- a/ui/hello.html
+++ b/ui/hello.html
@@ -25,7 +25,9 @@
      Name: Ashutosh Singh
      Age:20
      University/College: Lovely Professional University
-     Views ${cnt}
+     Views <script>
+     document.write(cnt);
+     </script>
  </pre>
  </div>  
  
