--- a/ui/hello.html
+++ b/ui/hello.html
@@ -11,6 +11,8 @@
     var counter=document.getElementById("Count");
     counter.onClick=function(){
     cnt=cnt+1;
+
+    $(".val").html(cnt);
     }
     
 </script>
@@ -25,9 +27,7 @@
      Name: Ashutosh Singh
      Age:20
      University/College: Lovely Professional University
-     Views <script>
-     document.write(cnt);
-     </script>
+     Views <div id="val"></div>
  </pre>
  </div>  
  
