[imad-console] Updates ui/hello.html

--- a/ui/hello.html
+++ b/ui/hello.html
@@ -11,8 +11,7 @@
     var counter=document.getElementById("Count");
     counter.onClick=function(){
     cnt=cnt+1;
-
-    $(".val").html(cnt);
+    document.getElementById("val").innerHTML = carName;
     }
     
 </script>
@@ -27,7 +26,7 @@
      Name: Ashutosh Singh
      Age:20
      University/College: Lovely Professional University
-     Views <div id="val"></div>
+     Views <p id="val"></p>
  </pre>
  </div>  
  
