--- a/ui/hello.html
+++ b/ui/hello.html
@@ -11,7 +11,7 @@
     var counter=document.getElementById("Count");
     counter.onClick=function(){
     cnt=cnt+1;
-    document.getElementById("val").innerHTML = carName;
+    document.getElementById("val").innerHTML = cnt;
     }
     
 </script>
