[imad-console] Updates ui/hello.html

--- a/ui/hello.html
+++ b/ui/hello.html
@@ -11,7 +11,7 @@
     var counter=document.getElementById("Count");
     counter.onClick=function(){
     cnt=cnt+1;
-    document.getElementById("val").innerHTML = ${cnt};
+    document.getElementById("val").innerHTML = 1010;
     }
     
 </script>
