[imad-console] Updates ui/hello.html

--- a/ui/hello.html
+++ b/ui/hello.html
@@ -18,7 +18,7 @@
 <script src="/ui/isrc.js"></script>
 </head>
 
-<body bgcolor="white">
+<body bgcolor="#FFFFFF">
  <div align=center><img src="ui/img.jpg" height="50" width="50"></div>
  
  <div class="text" align=center>
@@ -26,11 +26,11 @@
      Name: Ashutosh Singh
      Age:20
      University/College: Lovely Professional University
-     Views <p id="val"></p>
+     Views= <p id="val"></p>
  </pre>
  </div>  
  
-<button type="button" id="Count">Counter</button>
+<button align="center" type="button" id="Count">Counter</button>
  
    
    
