[imad-console] Updates ui/hello.html

--- a/ui/hello.html
+++ b/ui/hello.html
@@ -11,11 +11,13 @@
     var counter=document.getElementById("Count");
     counter.onClick=function(){
     cnt=cnt+1;
-    document.getElementById("val").innerHTML = 1010;
+    var int=cnt;
+   document.getElementById("val").innerHTML = int ;
     }
-    
+  
 </script>
 <script src="/ui/isrc.js"></script>
+
 </head>
 
 <body bgcolor="#FFFFFF">
