[imad-console] Updates ui/hello.html

--- a/ui/hello.html
+++ b/ui/hello.html
@@ -12,7 +12,7 @@
     counter.onClick=function(){
     cnt=cnt+1;
     var int=cnt;
-   document.getElementById("val").innerHTML = int ;
+   document.getElementById("val").innerHTML = ${int} ;
     }
   
 </script>
