[imad-console] Updates ui/hello.html

--- a/ui/hello.html
+++ b/ui/hello.html
@@ -13,7 +13,7 @@
     counter.onClick=function(){
     cnt=cnt+1;
     var int=cnt;
-   document.getElementById("val").innerHTML = "${int}" ;
+   document.getElementById("val").innerHTML = ${cnt} ;
     }
   
 </script>
