--- a/ui/hello.html
+++ b/ui/hello.html
@@ -27,7 +27,7 @@
     function msg1(){
     cnt=cnt+1;
     var int=cnt;
-   document.getElementById("val").innerHTML = ${cnt} ;
+   document.getElementById("val").innerHTML = "hello" ;
     }
   </script>
   
