--- a/ui/hello.html
+++ b/ui/hello.html
@@ -26,8 +26,8 @@
     //var counter=document.getElementById("Count");
     function msg1(){
     cnt=cnt+1;
-    var int=cnt;
-   document.getElementById("val").innerHTML = "hello" ;
+    
+   document.getElementById("val").innerHTML = cnt ;
     }
   </script>
   
