--- a/ui/hello.html
+++ b/ui/hello.html
@@ -11,6 +11,7 @@
 
 
 <body bgcolor="#FFFFFF">
+    <script src="isrc.js"></script>
  <div align=center><img src="ui/img.jpg" height="50" width="50"></div>
  
  <div class="text" align=center>
