[imad-console] Updates ui/hello.html

--- a/ui/hello.html
+++ b/ui/hello.html
@@ -18,12 +18,13 @@
      Name: Ashutosh Singh
      Age:20
      University/College: Lovely Professional University
-     Views= <p id="val"> </p>
+     Counter Play= <p id="val"> </p>
  </pre>
- </div>  
+ </div>
  
-<button align="center" type="button" id="Count" onclick="msg1()">Counter</button>
- 
+ <div align=center>
+<button  type="button" id="Count" onclick="msg1()">Counter</button>
+ </div>
    
    
 </body>
