[imad-console] Updates ui/index.html

--- a/ui/index.html
+++ b/ui/index.html
@@ -8,7 +8,7 @@
     <body>
          
         <div class="center">
-            <img src="/ui/img.jpg" height=50 width=50 class="img-medium" />
+            <img src="/ui/img.jpg" class="img-medium" />
         </div>
         <br>
         <div class="center text-big bold">
