[imad-console] Updates ui/index.html

--- a/ui/index.html
+++ b/ui/index.html
@@ -8,7 +8,7 @@
     <body>
          
         <div class="center">
-            <img src="/ui/img.jpg" onClick="mov1()" />
+            <img src="/ui/img.jpg" onClick="mov1()" id="img" />
         </div>
         <br>
         <div class="center text-big bold">
