[imad-console] Updates ui/hello.html

--- a/ui/hello.html
+++ b/ui/hello.html
@@ -16,7 +16,7 @@
  <div class="text" align=center>
  <pre>    
      Name: Ashutosh Singh
-     <hr />
+     <hr align=center width="500px"/>
      Age:20
      <hr />
      University/College: Lovely Professional University
