[imad-console] Updates ui/hello.html

--- a/ui/hello.html
+++ b/ui/hello.html
@@ -18,11 +18,11 @@
      Name: Ashutosh Singh
      <hr align=center width="500px"/>
      Age:20
-     <hr />
+      <hr align=center width="500px"/>
      University/College: Lovely Professional University
-     <hr />
+      <hr align=center width="500px"/>
      Counter Play= <p id="val"> </p>
-     <hr />
+      <hr align=center width="500px"/>
  </pre>
  </div>
  
