[imad-console] Updates ui/hello.html

--- a/ui/hello.html
+++ b/ui/hello.html
@@ -21,7 +21,7 @@
       <hr align=center width="500px"/>
      University/College: Lovely Professional University
       <hr align=center width="500px"/>
-     Counter Play= <p id="val"> </p>
+     Counter Play= <p id="val">0</p>
       <hr align=center width="500px"/>
  </pre>
  </div>
