--- a/ui/index.html
+++ b/ui/index.html
@@ -18,5 +18,7 @@
         <script type="text/javascript" src="/ui/main.js">
         </script>
         <a href="http://aashhuttossh.imad.hasura-app.io/hello"> LINK TO INTRO PAGE OF MINE!!</a>
+        
+        <div align=center>views on this page till server started = <p id="coun">0</p> !</div> 
     </body>
 </html>
