--- a/ui/index.html
+++ b/ui/index.html
@@ -19,6 +19,8 @@
         </script>
         <a href="http://aashhuttossh.imad.hasura-app.io/hello"> LINK TO INTRO PAGE OF MINE!!</a>
         
-        <div align=center>views on this page till server started = <p id="coun">0</p> !</div> 
+        <div align=center>views on this page till server started = <p id="coun"><a href="http://aashhuttossh.imad.hasura-app.io/counter"></a>
+        </p>
+        </div> 
     </body>
 </html>
