[imad-console] Updates ui/index.html

--- a/ui/index.html
+++ b/ui/index.html
@@ -22,5 +22,7 @@
         <div align=center>views on this page till server started = <p id="coun"><a href="http://aashhuttossh.imad.hasura-app.io/counter"></a>
         </p>
         </div> 
+        
+        <button type="Button" id="but1"></button>
     </body>
 </html>
