[imad-console] Updates ui/index.html

--- a/ui/index.html
+++ b/ui/index.html
@@ -23,6 +23,6 @@
         
         </div> 
         
-        <button type="Button" id="but1">Press here</button>
+        <button type="Button" id="but1" onClick="pressed()">Press here</button>
     </body>
 </html>
