[imad-console] Updates ui/index.html

--- a/ui/index.html
+++ b/ui/index.html
@@ -13,7 +13,7 @@
         
         <br>
         <div class="center text-big bold">
-            <marquee scrollamount="${counter}">Hi! I am Ashutosh, and welcome to my site! ye hey!...</marquee>
+            <marquee scrollamount=${counter}>Hi! I am Ashutosh, and welcome to my site! ye hey!...</marquee>
         </div>
         
         <script type="text/javascript" src="/ui/main.js">
