--- a/ui/hello.html
+++ b/ui/hello.html
@@ -32,7 +32,7 @@
  </div>
    
 
-<marquee><canvas id="myCanvas" width="1350" height="100" style="border:1px solid #d3d3d3;"></canvas></marquee>
+<marquee><canvas id="myCanvas" width="1350" height="100" style="border:1px solid #d3d3d3; border-radius:20px;"></canvas></marquee>
 <script>    
 var c = document.getElementById("myCanvas");
 var ctx = c.getContext("2d");
