--- a/ui/hello.html
+++ b/ui/hello.html
@@ -12,9 +12,9 @@
 
 <body bgcolor="#FFFFFF">
   
- <div align=center><img src="ui/img.jpg" height="50" width="50"></div>
+ <div class="text" align=center><img src="ui/img.jpg" height="50" width="50"></div>
  
- <div class="text" align=center>
+ 
  <pre>    
      Name: Ashutosh Singh
      <hr align=center width="500px"/>
