--- a/ui/hello.html
+++ b/ui/hello.html
@@ -12,7 +12,7 @@
 
 <body bgcolor="#FFFFFF">
   
- <div align="center"><img src="ui/img.jpg" height="50" width="50">
+ <div style="margin-left:700px;"><img src="ui/img.jpg" height="50" width="50">
  </div>
  <div class="text" align=center>
  <pre>    
