--- a/ui/hello.html
+++ b/ui/hello.html
@@ -35,7 +35,7 @@
 var c = document.getElementById("myCanvas");
 var ctx = c.getContext("2d");
 // Create gradient
-var grd = ctx.createLinearGradient(10,10,1350,80);
+//var grd = ctx.createLinearGradient(10,10,1350,80);
 grd.addColorStop(0,"red");
 grd.addColorStop(1,"white");
 // Fill with gradient
