[imad-console] Updates ui/hello.html

--- a/ui/hello.html
+++ b/ui/hello.html
@@ -29,7 +29,7 @@
 <button  type="button" id="Count" onclick="msg1()">Counter</button>
  </div>
    
-
+<p id="inp"></p>
 <marquee><canvas id="myCanvas" width="1350" height="100" style="border:1px solid #d3d3d3; border-radius:50px;"></canvas></marquee>
 <script>    
 var c = document.getElementById("myCanvas");
