[imad-console] Updates ui/hello.html

--- a/ui/hello.html
+++ b/ui/hello.html
@@ -26,7 +26,8 @@
       <hr align=center width="500px"/>
  </pre>
  
-<button  type="button" id="Count" onclick="msg1()">Counter</button>
+<button  type="button" id="CountP" onclick="msg1()">Counter INC</button>
+<button  type="button" id="CountM" onclick="msg2()">Counter DEC</button>
  </div>
    
 <p id="inp"></p>
