--- a/ui/hello.html
+++ b/ui/hello.html
@@ -14,7 +14,7 @@
   
  <div style="margin-left:670px;"><img src="ui/img.jpg" height="50" width="50">
  </div>
- <div style="Background-color="0fff0f" class="text" align=center>
+ <div style="Background-color:blue" class="text" align=center>
  <pre>    
      Name: Ashutosh Singh
      <hr align=center width="500px"/>
