[imad-console] Updates ui/hello.html

--- a/ui/hello.html
+++ b/ui/hello.html
@@ -14,15 +14,20 @@
   
  <div style="margin-left:670px;"><img src="ui/img.jpg" height="50" width="50">
  </div>
- <div style="Background-color:blue" class="text" align=center>
+ <div  class="text" align=center>
  <pre>    
-     Name: Ashutosh Singh
+   <div style="Background-color:red">
+     Name: Ashutosh Singh </div>
      <hr align=center width="500px"/>
-     Age:20
+   <div style="Background-color:green">
+     Age:20 </div>
       <hr align=center width="500px"/>
-     University/College: Lovely Professional University
+     <div style="Background-color:blue">
+     University/College: Lovely Professional University</div>
       <hr align=center width="500px"/>
+     <div style="Background-color:yellow">
      Counter Play= <p id="val">0</p>
+     </div>
       <hr align=center width="500px"/>
  </pre>
  
