[imad-console] Updates ui/hello.html

--- a/ui/hello.html
+++ b/ui/hello.html
@@ -15,21 +15,27 @@
  <div style="margin-left:670px;"><img src="ui/img.jpg" height="50" width="50">
  </div>
  <div  class="text" align=center>
- <pre>    
+   
    <div style="Background-color:red">
-     Name: Ashutosh Singh </div>
+     Name: Ashutosh Singh
      <hr align=center width="500px"/>
+          </div>
+
    <div style="Background-color:green">
-     Age:20 </div>
-      <hr align=center width="500px"/>
+     Age:20
+      <hr align=center width="500px"/></div>
+     
      <div style="Background-color:blue">
-     University/College: Lovely Professional University</div>
-      <hr align=center width="500px"/>
+     University/College: Lovely Professional University
+     <hr align=center width="500px"/>
+     </div>
+      
      <div style="Background-color:yellow">
      Counter Play= <p id="val">0</p>
+        <hr align=center width="500px"/>
      </div>
-      <hr align=center width="500px"/>
- </pre>
+   
+ 
  
 <button  type="button" id="CountP" onclick="msg1()">Counter INC</button>
 <button  type="button" id="CountM" onclick="msg2()">Counter DEC</button>
