--- a/Login.html
+++ b/Login.html
@@ -1,1 +1,12 @@
-
+<html>
+    <head>
+        <title>
+            
+        </title>
+    </head>
+    
+    <div>
+        Login here
+        <Input type="text" id="inp1"/>
+    </div>
+</html>
