[imad-console] Updates ui/hello.html

--- a/ui/hello.html
+++ b/ui/hello.html
@@ -35,7 +35,7 @@
       
      </div>
    
-  <hr align=center width="500px" height="5px" />
+  <hr style="Background-color:black;" align=center width="500px" height="5px" />
  
 <button  type="button" id="CountP" onclick="msg1()">Counter INC</button>
 <button  type="button" id="CountM" onclick="msg2()">Counter DEC</button>
