--- a/Login.html
+++ b/Login.html
@@ -7,6 +7,6 @@
     
     <div>
         Login here
-        <Input type="text" id="inp1"/>
+        <Input type="text" id="inp"/>
     </div>
 </html>
