[imad-console] Updates ui/login.html

--- a/ui/login.html
+++ b/ui/login.html
@@ -6,7 +6,7 @@
     </head>
     
     <div>
-        Login here
-        <Input type="text" id="inp1"/>
+        <div style="position:absolute;margin-left:100px;margin-top:50px"> Login here </div>
+        <div style="position:absolute;margin-left:100px;margin-top:100px"><Input type="text" id="inp1"/></div>
     </div>
 </html>
