[imad-console] Updates ui/login.html

--- a/ui/login.html
+++ b/ui/login.html
@@ -6,7 +6,9 @@
     </head>
     
     <div>
-        <div style="position:absolute;margin-left:100px;margin-top:50px"> Login here </div>
-        <div style="position:absolute;margin-left:100px;margin-top:10px"><Input type="text" id="inp1"/></div>
+        Input SQL injection here 
+        <Input type="text" id="inp1"/>
+        <button onclick="f1()">Submit</button>
+
     </div>
 </html>
