[imad-console] Updates ui/hello.html

--- a/ui/hello.html
+++ b/ui/hello.html
@@ -57,6 +57,8 @@ ctx.fillStyle = grd;
 ctx.fillRect(10,10,1350,80);
 </script>
 
+<div style="margin-top:200px;margin-left:200px;"><a href="ui/game1.html">Being Bored? CLick here to do some timepass</a></div>
+
    
 </body>
 </html>
