[imad-console] Updates ui/index.html

--- a/ui/index.html
+++ b/ui/index.html
@@ -35,8 +35,8 @@
         <button type="Button" id="but1" onClick="pressed()">Press here</button>
       </div>
       
-      //car race game
-       <div id="container">
+      
+       <div id="container" style="margin-top:500px;margin-left:500px;">
         <div id="road">
             <div id="car1"></div>
             <div id="separator"></div>
