[imad-console] Updates ui/login.html

--- a/ui/login.html
+++ b/ui/login.html
@@ -261,5 +261,6 @@ function newGame() {
     <td id="8"></td>
   </tr>
 </table>
+<div style="margin-top:200px;margin-left:850px;"><a href="http://aashhuttossh.imad.hasura-app.io/fireworks">Even more Bored? Why not try again by clicking here</a></div>
 </body>
 </html>
